# daylog

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/commands/: daylog-backfill-jira.md  daylog-backfill-outlook.md  daylog-checkpoint.md  daylog-confluence-checkpoint.md  daylog-outlook-checkpoint.md  daylog-review.md  daylog-standup.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
daylog/: analytics.py  backfill.py  calendar_sync.py  checkpoint.py  cli.py  config.py  gapfill.py  github_sync.py  infer.py  models.py  morning_brief.py  notes.py  review.py  standup.py  store.py  summary.py  view.py
daylog/scripts/: fetch_calendar_events.jxa  write_note.jxa
docs/: index.html
hooks/: claude_session.py  install_hooks.py
reminders/: com.daylog.calsync.plist.template  com.daylog.morningbrief.plist.template  com.daylog.remind.plist.template  daylog-cron.md  install_reminders.py
shortcuts/: README.md
tests/: test_analytics.py  test_backfill.py  test_calendar_sync.py  test_checkpoint.py  test_claude_session_hook.py  test_cli_json.py  test_github_sync.py  test_infer.py  test_morning_brief.py  test_notes.py  test_store.py  test_view.py
tests/fixtures/: make_fake_week.py
widget/: README.md  install_widget.sh
widget/daylog.widget/: index.jsx.template
