[project]
name = "daylog"
version = "0.1.0"
description = "A local-first CLI that captures where an engineer's day actually goes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.scripts]
dl = "daylog.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daylog"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
# Light default ruleset — pyflakes (unused imports/vars, undefined names) and
# pycodestyle errors, not a maximal/opinionated set. This is meant to catch
# real bugs in CI, not relitigate style on every PR.
select = ["E", "F"]
